--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,21 @@ project:
   type: website
 
 website:
-  title: "Aprendizaje Máquina Estadístico"
+  title: "Aprendizaje Maquina Estadístico"
   navbar:
-    left:
-      - href: index.qmd
-        text: "Inicio"
+    right:
+      - icon: github
+        href: https://github.com/AngelaOrtiz25/aprendizaje_maquina_estadistico.git
 
 format:
   html:
     theme: cosmo
     toc: true
-    css: styles.css
+    code-fold: true
+
+execute:
+  echo: true
+  warning: false
+  message: false
+
+jupyter: julia-1.11
